--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
 
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/fontawesome-free-6.7.2-web/css/all.css">
+    <link rel="stylesheet" href="css/header.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/main.js" defer></script>
+    <script src="scripts/header.js" defer></script>
 
 </head>
-<body class="bg-dark">
+<body>
+<main>
+    <header>
 
-
+    </header>
+</main>
 </body>
 </html>
